@@ -373,16 +373,18 @@ program swnb2
   integer,parameter::bnd_nbr_O2O2_max=4086 ! Greenblatt et al. (1992) resolution + SPS98 1.27 um band
   integer,parameter::bnd_nbr_HC_max=174 ! WMO85 resolution
   integer,parameter::bnd_nbr_HHCWC_max=174 ! WMO85 resolution
-  integer,parameter::bnd_nbr_aer_max=2895 ! WMO-spliced
+  integer,parameter::bnd_nbr_aer_max=4686 ! WMO-spliced
   integer,parameter::bnd_nbr_bga_max=480 ! 0.01 um resolution from 0.2--5.0 um
   integer,parameter::bnd_nbr_ice_max=480 ! 0.01 um resolution from 0.2--5.0 um
   integer,parameter::bnd_nbr_lqd_max=480 ! 0.01 um resolution from 0.2--5.0 um
   integer,parameter::bnd_nbr_lmn_max=81 ! CIE photopic luminosity function 5 nm resolution from 380-780 nm
   integer,parameter::bnd_nbr_nst_max=1000 ! new FSBR resolution
-  integer,parameter::bnd_nbr_rfl_max=2895 ! WMO-spliced
-  integer,parameter::bnd_nbr_mpr_max=2895 ! WMO-spliced
-  integer,parameter::bnd_nbr_snw_max=2895 ! WMO-spliced
-  integer,parameter::bnd_nbr_max=2895 ! WMO at 1 nm spliced onto 10 cm-1 resolution H2O line absorption
+  integer,parameter::bnd_nbr_rfl_max=4686 ! WMO-spliced
+  integer,parameter::bnd_nbr_mpr_max=4686 ! WMO-spliced
+  integer,parameter::bnd_nbr_snw_max=4686 ! WMO-spliced
+!  integer,parameter::bnd_nbr_max=2895 ! WMO at 1 nm spliced onto 10 cm-1 resolution H2O line absorption
+  integer,parameter::bnd_nbr_max=4686 ! WMO at 1 nm spliced onto 10 cm-1 SW H2O line absorption, 1 cm-1 LW H2O line absorption
+!  integer,parameter::bnd_nbr_max=12646 ! WMO at 1 nm spliced onto 10 cm-1 SW H2O line absorption, 0.2 cm-1 LW H2O line absorption
 !  integer,parameter::bnd_nbr_max=13691 ! WMO at 1 nm spliced onto  2 cm-1 resolution H2O line absorption
   integer,parameter::chn_nbr_max=12 ! [nbr] Arbitrary
   integer,parameter::lev_snw_nbr_max=5 ! CLM snow model resolution
